<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="name">Name</string>
    <string name="title_activity_calculator">Calculator</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Welcome :</string>
    <string name="status">Status :</string>
    <string name="weight">Weight :</string>
    <string name="height">Height :</string>
    <string name="m">M</string>
    <string name="kg">KG</string>
    <string name="calculate">Calculate</string>
    <string name="enter">Enter</string>
</resources>